@@ -1,11 +1,15 @@
 == 0.4.3 (In Git)
 
 === New Features
+* Added an example illustrating how to get screenshots in HTML reports (examples/watir) (Aslak Hellesøy)
 * The #announce method available from Ruby Step Definitions will print *after* the step is executed. (#487 Zoltan Penzeli)
 * Add support for rolling back transaction for all open database connections. (John Ferlito)
 * Allow the fixture transaction to be joined to avoid savepoint use (Bryan Helkamp)
 * Show scenario and step summary in HTML formatter (#285 Joseph Wilk)
 * Ast::Table can now be constructed with an Array of Hash. (Aslak Hellesøy)
+
+=== Changed features
+* The #announce method will no longer escape HTML if the html formatter is used. Escaping must be done manually. (Aslak Hellesøy)
 
 === Bugfixes
 * Usage formatter is not reporting time correctly. (Elliot Crosby-McCullough)
